src/objects/Delinquency_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delinquency Trackings</relationshipLabel>
        <relationshipName>Delinquency_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionId__c</fullName>
        <description>App. ID from Event</description>
        <label>ActionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Relationship__c.Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Client__c</valueField>
            </filterItems>
            <filterItems>
                <field>Case_Relationship__c.Case_Type__c</field>
                <operation>equals</operation>
                <value>In-Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Relationship__c</referenceTo>
        <relationshipLabel>Delinquency Tracking</relationshipLabel>
        <relationshipName>Delinquency_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delinquency Trackings</relationshipLabel>
        <relationshipName>Delinquency_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CourtPart__c</fullName>
        <label>CourtPart</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Contact__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deleted_by_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted by User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Non-compliance Letter of Status Report</description>
        <label>Document Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTA_reason__c</fullName>
        <label>FTA reason</label>
        <picklist>
            <picklistValues>
                <fullName>Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Car Fare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afraid of Court Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structured Obligations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_Date__c</fullName>
        <label>Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Detained by other legal authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant (returned within 30 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant - Did not return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant - Picked Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant - Status Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant Stayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant Vacated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outreach_type__c</fullName>
        <label>Outreach type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_Summary__c</fullName>
        <label>Reasons Summary</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_to_Program__c</fullName>
        <label>Returned to Program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SRP_ActivityDate__c</fullName>
        <label>SRP ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Clock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Clock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warrant_Outcome__c</fullName>
        <label>Warrant Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Warrant Vacated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant Stayed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warrant_issued__c</fullName>
        <label>Warrant issued</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>caseId__c</fullName>
        <label>caseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseType__c</fullName>
        <label>Case Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pcid__c</fullName>
        <label>pcid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Delinquency Tracking</label>
    <nameField>
        <label>Delinquency Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delinquency Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>